<resources>
    <string name="app_name">Tip calculator</string>
    <string name="costInputHint">Cost of Service</string>
    <string name="serviceQuestionText">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="calculateButtonText">Calculate</string>
    <string name="tip_amount_text">Tip Amount: %s</string>
    <string name="total_amount_text">Total Amount: %s</string>
    <string name="round_up_tip_text">Round up tip?</string>
</resources>